# app/docs/v1_swagger.yaml
@@ -103,7 +103,7 @@ paths:
         name: storeId
         required: true
         type: integer
-      - description: 用户校验
+      - description: 用户token
         in: header
         name: Authorization
         required: true
@@ -139,6 +139,32 @@ paths:
           schema:
             type: string
       summary: 登陆微信
+      tags:
+      - v1
+  /user/phone-number:
+    get:
+      consumes:
+      - application/json
+      description: 获取用户手机号
+      parameters:
+      - description: 微信code
+        in: query
+        name: code
+        required: true
+        type: string
+      - description: Authorization
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: 获取用户手机号
       tags:
       - v1
   /work:
